Bug 1328865 - Make nsJARURI::SetSpecWithBase ignore URL fragments. r=valentin

As otherwise it could wrongly find !/ delimiters with that.